// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletedListContainer should render ltr correctly 1`] = `
.c1 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  list-style-type: none;
}

.c1 > li::before {
  content: ' ';
  display: inline-block;
  width: 2rem;
  background: url("data:image/svg+xml,%3Csvg height='10' width='10' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='5' cy='5' r='3'%3E%3C/circle%3E%3C/svg%3E") no-repeat center;
  margin-left: -2rem;
}

.c3 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 {
  grid-column: 1 / span 6;
}

.c2 {
  display: inline-block;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
    dir="ltr"
    role="list"
  >
    <li
      role="listitem"
    >
      <div
        class="c2"
      >
        <div
          class="c0"
        >
          <p
            class="c3"
          >
            It is unordered
          </p>
        </div>
      </div>
    </li>
    <li
      role="listitem"
    >
      <div
        class="c2"
      >
        <div
          class="c0"
        >
          <p
            class="c3"
          >
            It has three list items
          </p>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`BulletedListContainer should render rtl correctly 1`] = `
.c3 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  list-style-type: none;
}

.c3 > li::before {
  content: ' ';
  display: inline-block;
  width: 2rem;
  background: url("data:image/svg+xml,%3Csvg height='10' width='10' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='5' cy='5' r='3'%3E%3C/circle%3E%3C/svg%3E") no-repeat center;
  margin-right: -2rem;
}

.c5 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 {
  position: relative;
}

.c4 {
  display: inline-block;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 0.5rem;
    width: calc(62.5% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <ul
      class="c3"
      dir="rtl"
      role="list"
    >
      <li
        role="listitem"
      >
        <div
          class="c4"
        >
          <div
            class="c0 c1"
            dir="ltr"
          >
            <div
              class="c2"
              dir="ltr"
            >
              <p
                class="c5"
              >
                It is unordered
              </p>
            </div>
          </div>
        </div>
      </li>
      <li
        role="listitem"
      >
        <div
          class="c4"
        >
          <div
            class="c0 c1"
            dir="ltr"
          >
            <div
              class="c2"
              dir="ltr"
            >
              <p
                class="c5"
              >
                It has three list items
              </p>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
